Bug 244512 - Location is not display in window title
Summary: Location is not display in window title
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (show other bugs)
Version: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2010-07-13 17:06 UTC by Pascal d'Hermilly
Modified: 2010-09-17 16:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In: 4.6.0


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2010-07-13 17:06:33 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Dolphin doesn't display the "present working directory" in the window title when browsing through sftp or smb protocol such as is the case when browsing local files.

Reproducible: Always

Steps to Reproduce:
Go to "somewhere" in your home folder.
Dolphins window title will change to somehing like "[somewhere] - Dolphin"
Go to an sftp location. 

Actual Results:  
Dolphins window title is "Dolphin"

Expected Results:  
The window title should change to "[the-directory-name] - Dolphin"
Comment 1 FiNeX 2010-08-02 11:27:45 UTC
bug reproduced in KDE 4.4.5.
Comment 2 Mark 2010-08-27 01:12:41 UTC
Confirmed on KDE 4.5.
Also for normal ftp.

I'm gonna work on this bug.
Comment 3 Frank Reininghaus 2010-09-08 23:43:29 UTC
See http://svn.reviewboard.kde.org/r/5178/
Comment 4 Peter Penz 2010-09-17 16:33:54 UTC
SVN commit 1176395 by ppenz:

Show location in window title for non-local URLs. Thanks to Mark Gaiser for the patch and David Faure for the review on http://reviewboard.kde.org/r/5178.

BUG: 244512
FIXED-IN: 4.6.0


 M  +7 -24     dolphinmainwindow.cpp  
 M  +0 -7      dolphinmainwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1176395