Show location in window title for non-local URLs. Thanks to Mark Gaiser for the patch and David Faure for the review on http://reviewboard.kde.org/r/5178.

BUG: 244512
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/apps/; revision=1176395